src/app/page.module.css
.shadow {
  box-shadow: 0.5px 0.5px 0 0.5px black, inset 1px 1px white,
    inset -1px -1px #85898d;
}

.bar > button {
  width: 15px;
  height: 13px;
}

.bar > button > svg {
  margin: 3px 3px 3px 4px;
}

.win98popup {
  position: absolute;
  display: flex;
  flex-flow: column nowrap;
  gap: 2rem;
  padding-bottom: 4rem;
  align-items: center;
  font-family: "Microsoft Sans Serif", sans-serif;
  background: #c2c6ca;
  font-size: 12px;
  -webkit-font-smoothing: none;
  width: 50vw;
  height: auto;
  box-shadow: 0.5px 0.5px 0 0.5px black, inset 1px 1px #c2c6ca,
    inset -1px -1px #85898d, inset 2px 2px white;

  /* button {
    background: #c2c6ca;
    border: none;
    padding: 0;
    border-radius: 0;
    outline: none;
  }

  .shadow {
    box-shadow: 0.5px 0.5px 0 0.5px black, inset 1px 1px white,
      inset -1px -1px #85898d;
  }

  .bar {
    display: flex;
    flex-flow: row nowrap;
    font-weight: bold;
    justify-content: space-between;
    width: calc(100% - 11px);
    height: 13px;
    color: white;
    background: #00a;
    padding: 2px 3px 3px;
    margin: 3px 2px 1px 3px;
    p {
      margin: 0;
    }
    button {
      width: 15px;
      height: 13px;
      &:active {
        box-shadow: 0.5px 0.5px 0 0.5px white, inset 1px 1px black,
          inset -1px -1px #c2c6ca, inset 2px 2px #85898d;
        svg {
          transform: translateX(1px) translateY(1px);
        }
      }
      svg {
        margin: 3px 3px 3px 4px;
      }
    }
  }
  .buttons {
    display: flex;
    flex-flow: row nowrap;
    margin: 1px 15px 14px 14px;
    button {
      width: 74px;
      height: 22px;
      display: grid;
      &:not(:last-child) {
        margin-right: 7px;
      }
      p {
        font-size: 12px;
        margin: auto;
      }
      img {
        margin: 4px 3px 3px 4px;
        display: none;
      }
      p,
      img {
        grid-column: 1;
        grid-row: 1;
      }
      &:focus {
        outline: none;
        box-shadow: 0.5px 0.5px 0 0.5px black, inset 1px 1px black,
          inset -1px -1px black, inset 2px 2px white, inset -2px -2px #85898d;
        img {
          display: block;
        }
      }
      &:active {
        box-shadow: 0.5px 0.5px 0 0.5px black, inset 1px 1px black,
          inset -1px -1px #85898d, inset 2px 2px #85898d;
        outline: none;
        p,
        img {
          transform: translateX(1px) translateY(1px);
        }
      }
    }
  } */
}
/* 
html,
body {
  height: 100%;
}
body {
  margin: 0;
  background: #55aaaa;
  display: flex;
  justify-content: center;
  align-items: center;
} */

.bar {
  display: flex;
  flex-flow: row nowrap;
  font-weight: bold;
  justify-content: space-between;
  width: calc(100% - 11px);
  /* height: 13px; */
  color: white;
  background: #00a;
  padding: 2px 3px 3px;
  margin: 3px 2px 1px 3px;
}

.text {
  padding: 2rem;
  color: #191919;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.container {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: flex-start;
}

.main {
  min-height: 100vh;
}

